tester/testsuite/good/function_calls3.jl
int plusTwo(int x) {
  return x + 2;
}

int main() {
  printInt(plusTwo(1));
  return 0;
}
