tester/testsuite/bad/inc_dec_array.jl
int main() {
    int [][] b = new int[1][1];
    b[0]++;
    return 0;
}
